# prism

./: .env.example  .gitignore  README.md  info.md
app/: main.py  test.py
app/database/: db.py  models.py
app/schemas/: schemas.py
app/static/: dashboard.html  index.html  login.html  signup.html  style.css
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: media.py
backend/app/database/: session.py
backend/app/database/models/: media.py
backend/app/media/: models.py  router.py  schemas.py  service.py  utils.py
backend/app/schemas/: media.py  user.py
backend/app/services/: context.py  media.py
backend/app/user/: router.py  schemas.py  service.py
backend/tests/: test.py
frontend/src/: dashboard.html  index.html  login.html  signup.html  style.css
frontend/src/styles/: auth.css  dashboard.css  error.css  global.css  main.css
frontend/src/views/auth/: login.html  signup.html
frontend/src/views/errors/: 404.html
